[project]
name = "redis-intruder"
version = "0.1.0"
description = "Just another redis metrics exporter written in pure Python"
authors = [
    {name = "Nikita Nikitenko",email = "quadronick@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
